@@ -74,7 +74,7 @@ class SmartTCPServer(object):
         self._stopped = threading.Event()
         self.root_client_path = root_client_path
 
-    def serve(self):
+    def serve(self, thread_name_suffix=''):
         self._should_terminate = False
         # for hooks we are letting code know that a server has started (and
         # later stopped).
@@ -116,7 +116,7 @@ class SmartTCPServer(object):
                         if e.args[0] != errno.EBADF:
                             trace.warning("listening socket error: %s", e)
                     else:
-                        self.serve_conn(conn)
+                        self.serve_conn(conn, thread_name_suffix)
             except KeyboardInterrupt:
                 # dont log when CTRL-C'd.
                 raise
@@ -139,21 +139,23 @@ class SmartTCPServer(object):
         """Return the url of the server"""
         return "bzr://%s:%d/" % self._sockname
 
-    def serve_conn(self, conn):
+    def serve_conn(self, conn, thread_name_suffix):
         # For WIN32, where the timeout value from the listening socket
         # propogates to the newly accepted socket.
         conn.setblocking(True)
         conn.setsockopt(socket.IPPROTO_TCP, socket.TCP_NODELAY, 1)
         handler = SmartServerSocketStreamMedium(
             conn, self.backing_transport, self.root_client_path)
-        connection_thread = threading.Thread(None, handler.serve, name='smart-server-child')
+        thread_name = 'smart-server-child' + thread_name_suffix
+        connection_thread = threading.Thread(
+            None, handler.serve, name=thread_name)
         connection_thread.setDaemon(True)
         connection_thread.start()
 
-    def start_background_thread(self):
+    def start_background_thread(self, thread_name_suffix=''):
         self._started.clear()
         self._server_thread = threading.Thread(None,
-                self.serve,
+                self.serve, args=(thread_name_suffix,),
                 name='server-' + self.get_url())
         self._server_thread.setDaemon(True)
         self._server_thread.start()
@@ -213,9 +215,10 @@ class SmartTCPServer_for_testing(SmartTCPServer):
     This server is backed by the process's cwd.
     """
 
-    def __init__(self):
+    def __init__(self, thread_name_suffix=''):
         SmartTCPServer.__init__(self, None)
         self.client_path_extra = None
+        self.thread_name_suffix = thread_name_suffix
         
     def get_backing_transport(self, backing_transport_server):
         """Get a backing transport from a server we are decorating."""
@@ -246,7 +249,7 @@ class SmartTCPServer_for_testing(SmartTCPServer):
         self.backing_transport = transport.get_transport(
             self.chroot_server.get_url())
         self.root_client_path = self.client_path_extra = client_path_extra
-        self.start_background_thread()
+        self.start_background_thread(self.thread_name_suffix)
 
     def tearDown(self):
         self.stop_background_thread()
